--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-"name": "KatashiBot-MD",
-"version": "1.4.9", 
+"name": "Broly-Bot-MD",
+"version": "1.4.0", 
 "description": "Super Bot WhatsApp",
 "main": "index.js",
 "type": "module",
@@ -15,16 +15,16 @@
 "test": "node test.js",
 "test2": "nodemon index.js" },
     
-"homepage": "https://github.com/KatashiFukushima/KatashiBot-MD",
+"homepage": "https://github.com/AngelPeruFachero/Broly-Bot-MD",
 "author": {
-"name": "KatashiFukushima" }, 
+"name": "AngelPeruFachero" }, 
     
 "repository": {
 "type": "git",
- "url": "git+https://github.com/KatashiFukushima/KatashiBot-MD.git" },
+ "url": "git+https://github.com/AngelPeruFachero/Broly-Bot-MD.git" },
  
 "bugs": {
-"url": "https://github.com/KatashiFukushima/KatashiBot-MD/issues" },
+"url": "https://github.com/AngelPeruFachero/Broly--MD/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
 "@whiskeysockets/baileys": "^6.5.0",
